fix: benchmark results

--- a/app/templates/benchmark_results.html
+++ b/app/templates/benchmark_results.html
@@ -37,6 +37,6 @@
         </tbody>
     </table>
 
-    <a href="/api/download_csv?filename={{ csv_filename }}" class="download-btn" download>Скачать CSV</a>
+    <a href="/download_csv?filename={{ csv_filename }}" class="download-btn" download>Скачать CSV</a>
 </body>
 </html>
